Removed maxwidth for correct spacing

--- a/pages/encrypt_decrypt_js/JSEncryption.module.css
+++ b/pages/encrypt_decrypt_js/JSEncryption.module.css
@@ -6,8 +6,6 @@
     background-image: url(../../images/encryption_BG.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100vw;
-    height: 100vh;
     color: white;
 
 }
